hphp/hack/test/typecheck/is_expression/talias.php.exp
File "talias.php", line 6, characters 13-23:
The "is" operator cannot be used with a type with generics, because generics are erased at runtime (Typing[4195])
